# krypt

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 490ee897529c_deleted_at_field.py  5ebc71c8f80f_fix.py  7d21de993486_init.py  896f88a4216d_initial_setup.py
src/auth_server/: main.py
src/auth_server/dependencies/: repositories.py  services.py
src/auth_server/routers/auth/: auth.py
src/auth_server/routers/users/: users.py
src/auth_server/services/: abstract_user_service.py  user_service.py
src/auth_server/services/models/: user_dto.py
src/core/cryptograhy/: cryptography_service.py
src/core/cryptograhy/strategies/: cryptography_strategy.py
src/core/networking/: transport_service.py
src/dals/: abstract_user_repository.py  user_repository.py
src/dals/models/: user.py
src/krypt/: configuration.py
src/krypt/auth_server/: configuration.py  main.py
src/krypt/auth_server/dependencies/: database.py  repositories.py  services.py
src/krypt/auth_server/services/: __init__.py  abstract_user_service.py  user_service.py
src/krypt/dals/: __init__.py  abstract_user_repository.py  user_repository.py
src/krypt/dals/models/: base.py  user.py
src/krypt/services/: __init__.py  abstract_auth_service.py  abstract_crypto_service.py  abstract_user_service.py  auth_service.py  crypto_service.py  user_service.py
src/krypt/services/models/: auth_user_dto.py  crypto_key_pair.py  encrypted_payload_dto.py  user_dto.py
src/krypt/tui_client/message_client/: main.py
src/krypt/utils/: pydantic_mapping.py
(+15 files in other folders)
