[project]
name = "krypt"
version = "0.1.0"
description = "An end-to-end encrypted messaging platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=46.0.3",
    "cython>=3.2.3",
    "pylint>=4.0.4",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.45",
    "websockets>=15.0.1",
]
